# CLion_SFML_HelloWorld

./: README.md
Game/: CMakeLists.txt  main.cpp
